--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-654.1KB/s(Youtube:不良林), server: 169.197.141.52, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇰🇷 韩国-364.3KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-3.18MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-673.3KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-964.2KB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇨🇳 中国-391.2KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-440.9KB/s(Youtube:不良林), server: zhizun22.jafiyun.club, port: 21186, type: vmess, uuid: 4c348c16-6c18-3ee6-81d3-052c7f4d4b65, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 169.197.141.52, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 台湾-1.37MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇭🇰 香港-469.8KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-784.8KB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
+  - {name: 未知国家-2.56MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-673.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-964.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.8KB/s(Youtube:不良林)
+      - 未知国家-2.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-673.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-964.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.8KB/s(Youtube:不良林)
+      - 未知国家-2.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-673.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-964.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.8KB/s(Youtube:不良林)
+      - 未知国家-2.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-673.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-964.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.8KB/s(Youtube:不良林)
+      - 未知国家-2.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-673.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-964.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.8KB/s(Youtube:不良林)
+      - 未知国家-2.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-673.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-964.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.8KB/s(Youtube:不良林)
+      - 未知国家-2.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-673.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-964.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
       - 🇭🇰 香港-469.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.8KB/s(Youtube:不良林)
+      - 未知国家-2.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
