--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-302.3KB/s(Youtube:不良林), server: tw99-direct.myn1des.com, port: 2096, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: tw99-direct.myn1des.com}}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 20.24.66.53, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-510.4KB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 64078, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
-  - {name: 🇸🇬 新加坡-1.25MB/s(Youtube:不良林), server: sg1.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg1.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-426.0KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-700.7KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-431.2KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-9.69MB/s(Youtube:不良林), server: 20.243.75.205, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇯🇵 日本-887.1KB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-824.9KB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 64078, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇨🇳 台湾-1.91MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-746.7KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇫🇷 法国-1.76MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-506.7KB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
+  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: sg1.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg1.v2yyds.cc, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-700.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-887.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-700.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-887.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-700.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-887.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-700.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-887.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-700.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-887.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-700.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-887.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-302.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-700.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-887.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
