--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-167.5KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 乌克兰-417.7KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-294.1KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇺🇸 美国-467.1KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.23MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-489.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-467.1KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇯🇵 日本-4.23MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇨🇳 中国-775.9KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
+  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
+  - {name: 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 乌克兰-417.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-775.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 乌克兰-417.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-775.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 乌克兰-417.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-775.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 乌克兰-417.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-775.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 乌克兰-417.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-775.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 乌克兰-417.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-775.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-167.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 乌克兰-417.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-775.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
